[project]
name = "ya-logseq-mcp"
version = "0.1.0"
description = "ya-logseq-mcp: Python MCP server for Logseq"
readme = "README.md"
authors = [
    { name = "Andrej Berg", email = "mail@andrej-berg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/andrej-berg/ya-logseq-mcp"
Repository = "https://github.com/andrej-berg/ya-logseq-mcp"

[project.scripts]
ya-logseq-mcp = "logseq_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: exercises a live Logseq instance against the isolated test graph",
]

[tool.uv.build-backend]
module-name = "logseq_mcp"
